# interrogation-unfold

./: .gitattributes  .gitignore  Info.plist  README.md  decrypt.py  extract.py  game.arcd  game.arci  game.dmanifest  game.public.der  main.py  pyproject.toml
SC_Info/: Interrogation.sinf  Interrogation.supf  Interrogation.supp  Interrogation.supx  Manifest.plist
_CodeSignature/: CodeResources
analysis/: README.md  browser_scene_architecture.md  pimsleur_2002_prototype_audit.md  retrieval_slice_contract.md  runtime_reconstruction.md
banks/: All Campaign.bank  All Levels.bank  Cutscene 1.bank  Cutscene Final.bank  Cutscene Intro.bank  Level episode0.bank  Level episode1.bank  Level episode10.bank  Level episode3.bank  Level episode4.bank  Level episode5.bank  Level episode6.bank  Level episode7.bank  Master Bank.bank  Master Bank.strings.bank  Menu.bank
docs/: architecture_atlas.md  first_case_blueprint.md  learning_map.md  unfold_defold_tool.md
episodes/: clog.json  episode2.json  episode5.json  sitdown_fred.json  sitdown_informer2.json  test_alex.json  test_amatis.json  test_anaba.json  test_bakil.json  test_interpreter.json  test_jerry.json  test_lynda.json  test_steve.json  test_timer.json  test_valerie.json
fuior/: example.fui  example_advanced.fui  triggered_fired.fui  triggered_fred_intro.fui  triggered_informer_intro.fui  triggered_informer_pursued.fui  triggered_torture2.fui  triggered_warning_popularity.fui
game/: README.md  game.projectc
intl/: campaign.en.lua  credits.en.lua  interview2.en.lua  level_clog.en.lua  level_episode10.en.lua  level_episode5.en.lua  level_sitdown_informer1.en.lua  level_sitdown_marin.en.lua  level_test_aaron.en.lua  level_test_anton.en.lua  level_test_diana.en.lua  level_test_fred.en.lua  level_test_insanity.en.lua  level_test_james.en.lua  level_test_jerry.en.lua  (+2 more)
(+637 files in other folders)
